syntax = "proto3";

package polykey.v1.identities;

message Provider {
  string provider_id = 1;
  string identity_id = 2;
}
message OptionalProvider {
  oneof optional_provider_id {
    string provider_id = 1;
  }
}

message Token {
  string token = 1;
}

message TokenSpecific {
  Provider provider = 1;
  string token = 2;
}

message Claim {
  string claim_id = 1;
  string url = 2;
}

message AuthenticationProcess {
  oneof step {
    AuthenticationRequest request = 1;
    AuthenticationResponse response = 2;
  }
}

message AuthenticationRequest {
  string url = 1;
  map<string, string> data = 2;
}

message AuthenticationResponse {
  string identity_id = 1;
}

message ProviderSearch {
  oneof optional_auth_identity_id {
    string auth_identity_id = 1;
  }
  string identity_id = 2;
  bool disconnected = 3;
  string limit = 4;
  repeated string search_term = 5;
  repeated string provider_id = 6;
}

message Info {
  Provider provider = 1;
  string name = 3;
  string email = 4;
  string url = 5;
}
